--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <div class="banner">
         <h1>Je te souhaite un joyeux anniversaire Violette </h1>
-        <p>Passe une bonne journée</p>
+        <p>Passe une bonne soirée</p>
         <p>
-          <a href="https://martucci98.github.io/Vio/">Voir d'autres photos</a>
+          <a href="https://martucci98.github.io/landing2/">Voir d'autres photos</a>
         </p>
     </div>
 	
@@ -36,8 +36,8 @@
             <div class="col-4 col-sm-6 col-lg-4">
                 <div class="card-white">   
                     <img src="images/g&v.jpg" alt="g&v" height="140" class="card-white">
-                    <h2>L'amour fou</h2>
-                    <p>Tu as touché mon <strong>coeur</strong></p>
+                    <h2>....</h2>
+                    <p><strong><3</strong></p>
                 </div>
             </div>
         </div>
