--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Je te souhaite un joyeux anniversaire Violette </h1>
         <p>Passe une bonne soirée</p>
         <p>
-          <a href="https://martucci98.github.io/vio3/">Voir d'autres photos</a>
+          <a href="https://martucci98.github.io/landingbis/">Voir d'autres photos</a>
         </p>
     </div>
 	
