--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
         </div>
     </div>
 
-    <p>This is a website made @Gustave</p>
+    <p>This is a website made @Alix</p>
 <ul>
     <li>
-        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.facebook.com/vaz.vaz.33/"><i class="fab fa-facebook"></i></a>
     </li>
     <li>
-        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.facebook.com/vaz.vaz.33/"><i class="fab fa-twitter"></i></a>
     </li>
     <li>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/vaz.vaz.33/"><i class="fab fa-instagram"></i></a>
     </li>
     <li>
-        <a href="#"><i class="fab fa-github"></i></a>
+        <a href="https://www.facebook.com/vaz.vaz.33/"><i class="fab fa-github"></i></a>
     </li>
 </ul>
 <div class="container">
