--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="col-4 col-sm-6 col-lg-4">
                 <div class="card-white">   
                     <img src="images/g&v.jpg" alt="g&v" height="140" class="card-white">
-                    <h2></h2>
-                    <p><strong></strong></p>
+                    <h2>...</h2>
+                    <p><strong>...</strong></p>
                 </div>
             </div>
         </div>
